default/objects/CCS_Contact__c/CCS_Contact__c.object-meta.xml
<CustomObject>
    <description>CCS Contact Custom object for CCS Order and robot. Not used by end-users.</description>
    <label>CCS Contact</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCS Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>