default/objects/CCS_Contact__c/fields/Account_administrator__c.field-meta.xml
<CustomField>
    <fullName>Account_administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account administrator</label>
    <type>Checkbox</type>
</CustomField>