default/objects/CCS_Contact__c/fields/CCS_Order__c.field-meta.xml
<CustomField>
    <fullName>CCS_Order__c</fullName>
    <label>CCS Order</label>
    <referenceTo>CCS_Order__c</referenceTo>
    <relationshipLabel>CCS Contacts</relationshipLabel>
    <relationshipName>CCS_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>