default/objects/CCS_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>